--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ html {
 }
 
 body {
-    font-family: 'JetBrains Mono', 'Courier New', monospace;
+    font-family:Arial, Helvetica, sans-serif;
     background: var(--color-bg-primary);
     color: var(--color-text-primary);
     overflow-x: hidden;
